# FEMcomp

./: .gitignore  .~lock.test.xlsx#  Cargo.toml
fem_comp/: Cargo.toml
fem_comp/src/: calcs.rs  ios.rs  lib.rs  vals.rs
fem_gui/: Cargo.toml
fem_gui/src/: main.rs
src/: calcs.rs  ios.rs  main.rs  vals.rs
