[package]
name = "fem_gui"
version = "0.1.0"
edition = "2021" 

[dependencies]
fem_comp = { path = "../fem_comp" }
# raylib = {git = "https://github.com/bitten2up/raylib-rs.git", branch ="main"}
nfd = { git = "https://github.com/MFEK/nfd.rlib.git" }
[dependencies.raylib]
git = "https://github.com/bitten2up/raylib-rs.git"
branch ="o7-compiling-issues"
